Larger Refactor